For now.. validation class doesn't work